--- a/style.css
+++ b/style.css
@@ -185,6 +185,13 @@ html {
   max-width: 1200px;
   margin: 0 auto;
 }
+.para-text{
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.6;
+  text-align: justify;
+  color: #666;
+}
 
 /* Header */
 .site-header {
@@ -1272,7 +1279,7 @@ html {
     border-bottom: 1px solid rgba(212, 175, 55, 0.2);
   }
   .main-nav a {
-    color: #f0f0f0;
+    color: #494848;
   }
   .main-nav a:hover {
     color: #d4af37;
